[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/draw_gd/src/UI/Dialogs/ExportDialog.gd" type="Script" id=1]
[ext_resource path="res://addons/draw_gd/src/UI/TransparentChecker.tscn" type="PackedScene" id=2]

[node name="ExportDialog" type="AcceptDialog"]
margin_right = 532.0
margin_bottom = 530.0
rect_min_size = Vector2( 456, 530 )
window_title = "Export..."
resizable = true
dialog_hide_on_ok = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 524.0
margin_bottom = 494.0
rect_min_size = Vector2( 330, 0 )
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviewLabel" type="Label" parent="VBoxContainer"]
margin_right = 516.0
margin_bottom = 14.0
text = "Preview:"

[node name="PreviewPanel" type="Panel" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 516.0
margin_bottom = 386.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TransparentChecker" parent="VBoxContainer/PreviewPanel" instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="PreviewScroll" type="ScrollContainer" parent="VBoxContainer/PreviewPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previews" type="GridContainer" parent="VBoxContainer/PreviewPanel/PreviewScroll"]
margin_right = 516.0
margin_bottom = 368.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 390.0
margin_right = 516.0
margin_bottom = 394.0

[node name="Options" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 398.0
margin_right = 516.0
margin_bottom = 422.0

[node name="ResizeLabel" type="Label" parent="VBoxContainer/Options"]
margin_top = 5.0
margin_right = 46.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 0 )
text = "Resize:"
align = 2

[node name="Resize" type="SpinBox" parent="VBoxContainer/Options"]
margin_left = 50.0
margin_right = 235.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
min_value = 50.0
max_value = 1000.0
step = 100.0
value = 100.0
align = 2
suffix = "%"

[node name="InterpolationLabel" type="Label" parent="VBoxContainer/Options"]
margin_left = 239.0
margin_top = 5.0
margin_right = 326.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 0 )
text = "Interpolation:"
align = 2

[node name="Interpolation" type="OptionButton" parent="VBoxContainer/Options"]
margin_left = 330.0
margin_right = 516.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Nearest"
align = 2
items = [ "Nearest", null, false, 0, null, "Bilinear", null, false, 1, null, "Cubic", null, false, 2, null, "Trilinear", null, false, 3, null, "Lanczos", null, false, 4, null ]
selected = 0

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 426.0
margin_right = 516.0
margin_bottom = 430.0

[node name="Path" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 434.0
margin_right = 516.0
margin_bottom = 458.0

[node name="Label" type="Label" parent="VBoxContainer/Path"]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 0 )
text = "Path:"

[node name="PathLineEdit" type="LineEdit" parent="VBoxContainer/Path"]
margin_left = 36.0
margin_right = 453.0
margin_bottom = 24.0
size_flags_horizontal = 3
align = 2

[node name="PathButton" type="Button" parent="VBoxContainer/Path"]
margin_left = 457.0
margin_right = 516.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
text = "Browse"

[node name="File" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 462.0
margin_right = 516.0
margin_bottom = 486.0

[node name="Label" type="Label" parent="VBoxContainer/File"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 0 )
text = "File:"

[node name="FileLineEdit" type="LineEdit" parent="VBoxContainer/File"]
margin_left = 34.0
margin_right = 376.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "untitled"
align = 2

[node name="FileFormat" type="OptionButton" parent="VBoxContainer/File"]
margin_left = 380.0
margin_right = 516.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
mouse_default_cursor_shape = 8
disabled = true
text = ".png; PNG Image"
items = [ ".png; PNG Image", null, false, 0, null, ".gif; GIF Image", null, false, 1, null ]
selected = 0

[node name="Popups" type="Node" parent="."]

[node name="PathDialog" type="FileDialog" parent="Popups"]
margin_left = 8.0
margin_top = 8.0
margin_right = 448.0
margin_bottom = 494.0
rect_min_size = Vector2( 440, 300 )
size_flags_horizontal = 0
size_flags_vertical = 0
window_title = "Open a Directory"
resizable = true
mode = 2
access = 2
current_dir = "/home/relintai/Projects/draw_gd"
current_path = "/home/relintai/Projects/draw_gd/"

[node name="PathValidationAlert" type="AcceptDialog" parent="Popups"]
margin_left = 8.0
margin_top = 180.0
margin_right = 448.0
margin_bottom = 280.0
size_flags_horizontal = 0
size_flags_vertical = 0
window_title = "Alarm!"
resizable = true
dialog_text = "Directory path or file name is not valid!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileExistsAlert" type="AcceptDialog" parent="Popups"]
margin_left = 10.5227
margin_top = 176.636
margin_right = 450.523
margin_bottom = 276.636
size_flags_horizontal = 0
size_flags_vertical = 0
window_title = "Alarm!"
resizable = true
dialog_text = "File %s already exists. Overwrite?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportProgressBar" type="WindowDialog" parent="Popups"]
margin_left = 63.0
margin_top = 215.0
margin_right = 402.0
margin_bottom = 256.0
popup_exclusive = true
window_title = "Exporting in progress..."
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Popups/ExportProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Popups/ExportProgressBar/MarginContainer"]
margin_right = 329.0
margin_bottom = 14.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="about_to_show" from="." to="." method="_on_ExportDialog_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_ExportDialog_confirmed"]
[connection signal="custom_action" from="." to="." method="_on_ExportDialog_custom_action"]
[connection signal="popup_hide" from="." to="." method="_on_ExportDialog_popup_hide"]
[connection signal="value_changed" from="VBoxContainer/Options/Resize" to="." method="_on_Resize_value_changed"]
[connection signal="item_selected" from="VBoxContainer/Options/Interpolation" to="." method="_on_Interpolation_item_selected"]
[connection signal="text_changed" from="VBoxContainer/Path/PathLineEdit" to="." method="_on_PathLineEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/Path/PathButton" to="." method="_on_PathButton_pressed"]
[connection signal="text_changed" from="VBoxContainer/File/FileLineEdit" to="." method="_on_FileLineEdit_text_changed"]
[connection signal="item_selected" from="VBoxContainer/File/FileFormat" to="." method="_on_FileFormat_item_selected"]
[connection signal="dir_selected" from="Popups/PathDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="confirmed" from="Popups/FileExistsAlert" to="." method="_on_FileExistsAlert_confirmed"]
[connection signal="custom_action" from="Popups/FileExistsAlert" to="." method="_on_FileExistsAlert_custom_action"]
